# trial

./: blueprint.md  index.html  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: dashboard.py  maintenance.py  onboarding.py
app/core/: config.py  errors.py  logging.py  supabase.py
app/domain/: maintenance_rules.py
app/repositories/: supabase_repository.py
app/schemas/: dashboard.py  maintenance.py  properties.py  tenancies.py
app/services/: dashboard_service.py  maintenance_service.py  onboarding_service.py
frontend/: next-env.d.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/landlord/: page.tsx
frontend/src/app/tenant/[id]/: page.tsx
frontend/src/components/ui/: button.tsx  card.tsx  modal.tsx  skeleton.tsx
tests/: conftest.py  test_routes.py
